(fix) reduce gap between icons in hover-nav to prevent layout shift on like/unlike toggle

--- a/css/general.css
+++ b/css/general.css
@@ -57,7 +57,8 @@ i {
   position: relative;
   padding-bottom: 5px;
 }
-.nav-list-li::after, .nav-list-li.active::after {
+.nav-list-li::after,
+.nav-list-li.active::after {
   content: "";
   display: block;
   margin-right: auto;
@@ -66,7 +67,8 @@ i {
   background: transparent;
   transition: width 0.5s ease, background-color 0.7s ease;
 }
-.nav-list-li:hover::after, .nav-list-li.active::after {
+.nav-list-li:hover::after,
+.nav-list-li.active::after {
   width: 100%;
   background: #111;
 }
@@ -472,7 +474,7 @@ i {
 .hover-nav {
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  gap: 0.8rem;
   justify-content: space-between;
 }
 .hover-nav-item a:link,
@@ -483,7 +485,7 @@ i {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.4rem;
+  gap: 2px;
 }
 
 .hover-nav-item ion-icon,
